Add swagger to all API endpoint
